[gd_scene load_steps=2 format=3 uid="uid://p8msrji7o5tx"]

[ext_resource type="Script" uid="uid://b4aj8r7g1at0r" path="res://scripts/conductor.gd" id="1_m27ba"]

[node name="Conductor" type="AudioStreamPlayer" groups=["conductor"]]
bus = &"Music"
script = ExtResource("1_m27ba")

[node name="Start Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="beat" from="." to="." method="_on_beat"]
[connection signal="measure" from="." to="." method="_on_measure"]
[connection signal="timeout" from="Start Timer" to="." method="_on_start_timer_timeout"]
